--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Data/Amazon/4_NormalizedSentiment/version_2/TSLN/
 /Data/Hepsiburada/4_NormalizedSentiment/version_2/TSLN/
 /ZemberekData/
+/.idea/
